<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="admin">admin</string>
    <string name="password">password</string>
    <string name="sigon">SIGN ON</string>
    <string name="emailid">EmailID:</string>
    <string name="Password">Password:</string>
    <string name="login">Login</string>
    <string name="show_password">Show Password</string>
    <string name="image_on_click">image on click</string>

</resources>
